--- a/styles.css
+++ b/styles.css
@@ -127,7 +127,7 @@ header {
   cursor: pointer;
   padding: 5px 10px;
   border-radius: 5px;
-  background-color: #ff6347;
+  background-color: #ff63478a;
   color: #fff;
 }
 
