--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
   background: #fff9f4;
   color: #333;
   overflow-x: hidden; /* Prevent horizontal overflow */
-  background-image: url("images/bkg1.jpeg");
+  background-image: url("images/background.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -31,7 +31,7 @@ a {
 header {
   margin: 0 auto;
   background-color: #ffffff;
-  padding: 20px;
+  padding: 3px;
   position: relative;
 }
 
@@ -197,6 +197,13 @@ main {
   padding: 10px 20px;
   border-radius: 5px;
   text-decoration: none;
+}
+
+.popular-heading {
+  background-color: #ffe5d0;
+  padding: 10px 20px;
+  border-radius: 8px;
+  display: inline-block;
 }
 
 .product-grid {
