--- a/styles.css
+++ b/styles.css
@@ -29,18 +29,18 @@ a {
    Header and Navigation
 ------------------------------ */
 header {
-  margin: 0 auto;
-  background-color: #ffffff;
-  padding: 3px;
-  position: relative;
+  margin: 0 auto !important;
+  background-color: #ffffff !important;
+  margin-bottom: 3px !important;
+  position: relative !important;
 }
 
 .header-bar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
-  padding: 10px 20px;
+  display: flex !important;
+  justify-content: space-between !important;
+  align-items: center !important;
+  flex-wrap: wrap !important;
+
 }
 
 .logo-left,
@@ -78,7 +78,8 @@ header {
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 10px;
+  gap: 15px;
+  margin-right: 45px;
 }
 
 .search-form {
